--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html lang="en" class="dark"> {/* Apply dark class by default */}
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -16,17 +16,17 @@
     <meta property="og:title" content="Yonatan Teklemariam | Plant Scientist & Frontend Developer" />
     <meta property="og:description" content="Bridging Agriculture & Technology with Purpose. Explore Yonatan's work and journey." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/lovable-uploads/yonatan-og-image-placeholder.png" /> {/* Placeholder OG image */}
-    <meta property="og:url" content="YOUR_WEBSITE_URL_HERE" /> {/* Replace with actual URL when deployed */}
+    <meta property="og:image" content="/lovable-uploads/yonatan-og-image-placeholder.png" /> 
+    <meta property="og:url" content="YOUR_WEBSITE_URL_HERE" />
 
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@YourTwitterHandle" /> {/* Optional: Add Twitter handle */}
+    <meta name="twitter:site" content="@YourTwitterHandle" /> 
     <meta name="twitter:title" content="Yonatan Teklemariam | Plant Scientist & Frontend Developer" />
     <meta name="twitter:description" content="Bridging Agriculture & Technology with Purpose. Explore Yonatan's work and journey." />
-    <meta name="twitter:image" content="/lovable-uploads/yonatan-og-image-placeholder.png" />  {/* Placeholder Twitter image */}
+    <meta name="twitter:image" content="/lovable-uploads/yonatan-og-image-placeholder.png" /> 
 
-    <link rel="icon" href="/favicon.svg" type="image/svg+xml" /> {/* Placeholder favicon */}
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
   </head>
 
   <body>
